To fix home page
Previously the homepage.html is broken, because of the restrictions
introduced in thymeleaf 3.0.9. But the problem is that we cannot render
template using URL parameters without any validation. So a separate
@GetMapping("/homepage") function is created for such purpose.

--- a/src/main/resources/templates/console.html
+++ b/src/main/resources/templates/console.html
@@ -15,7 +15,8 @@
 </nav>
 
 <div class="container">
-	<div th:if="${param.message != null}" class="alert alert-info" th:utext="${param.message[0]}">message</div>
+    <span>TODO Please come up with a way to pass in the message instead of parameter in URL. </span>
+	<!-- <div th:if="${param.message != null}" class="alert alert-info" th:utext="${param.message[0]}">message</div> -->
 	
     <h1>This is the landing page for the admin</h1>
     
